--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 <body>
 
     <div class="navbar">
-        <a href="joel2.html" class="active">Home</a>
+        <a href="index.html" class="active">Home</a>
         <a href="joel1.html">About</a>
         <a href="https://github.com/Vasu-uu">GitHub</a>
     </div>
