--- a/joel1.html
+++ b/joel1.html
@@ -33,7 +33,7 @@
     </style></head>
     <body> 
         <div class="navbar">
-            <a href="joel2.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="joel1.html" class="active" >About</a>
             <a href="https://github.com/Joel-77524">GitHub</a>
         </div>
